Improve QDebug formatting of QtSql classes.

Fix quoting/spaces, introduce QDebugStateSaver, add missing fields
of QSqlField.

Task-number: QTBUG-39388
Change-Id: Id397f9e79f4d4d2bb5c903cd96bf2c27f8e1b7c3
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>